// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Card Matches snapshot (Checked, Desktop) 1`] = `
.c9 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  margin-right: var(--spacing-2x);
  vertical-align: middle;
  width: var(--size-1x);
}

.c0 {
  border: none;
}

.c1 {
  font-size: 0.75rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #012639;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: initial;
  -moz-letter-spacing: initial;
  -ms-letter-spacing: initial;
  letter-spacing: initial;
  line-height: 1.5rem;
  margin-bottom: var(--spacing-1x);
}

.c11 {
  color: #60666E;
  font-size: 0.875rem;
  padding-left: var(--spacing-4x);
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c2:hover:not([disabled]) {
  background-color: #DBDEE1;
  border-color: #60666E;
  cursor: pointer;
}

.c2:hover:not([disabled]) .c10,
.c2:hover:not([disabled]) .c6 {
  color: #000000;
}

.c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c3 {
  height: var(--size-1x);
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0.125rem;
  width: var(--size-1x);
}

.c3:checked + .c4 > .c6 > .c8 {
  border: 2px solid #006296;
}

.c3:checked + .c4 > .c6 > .c8::after {
  background-color: #006296;
  border-radius: 50%;
  content: '';
  height: var(--size-half);
  margin: 6px;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: var(--size-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  />
  <div
    class="c2"
    data-testid="radio-card-test-container"
  >
    <input
      aria-describedby="description-undefined"
      checked=""
      class="c3"
      data-testid="radio-card-test-input"
      name="test"
      type="radio"
      value="test"
    />
    <label
      class="c4 c5"
    >
      <span
        class="c6 c7"
      >
        <span
          class="c8 c9"
        />
        Test
      </span>
      <span
        aria-hidden="true"
        class="c10 c11"
        id="description-undefined"
      >
        Test description
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Card Matches snapshot (Default, Desktop) 1`] = `
.c9 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  margin-right: var(--spacing-2x);
  vertical-align: middle;
  width: var(--size-1x);
}

.c0 {
  border: none;
}

.c1 {
  font-size: 0.75rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: initial;
  -moz-letter-spacing: initial;
  -ms-letter-spacing: initial;
  letter-spacing: initial;
  line-height: 1.5rem;
  margin-bottom: var(--spacing-1x);
}

.c11 {
  color: #60666E;
  font-size: 0.875rem;
  padding-left: var(--spacing-4x);
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c2:hover:not([disabled]) {
  background-color: #DBDEE1;
  border-color: #60666E;
  cursor: pointer;
}

.c2:hover:not([disabled]) .c10,
.c2:hover:not([disabled]) .c6 {
  color: #000000;
}

.c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c3 {
  height: var(--size-1x);
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0.125rem;
  width: var(--size-1x);
}

.c3:checked + .c4 > .c6 > .c8 {
  border: 2px solid #006296;
}

.c3:checked + .c4 > .c6 > .c8::after {
  background-color: #006296;
  border-radius: 50%;
  content: '';
  height: var(--size-half);
  margin: 6px;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: var(--size-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  />
  <div
    class="c2"
    data-testid="radio-card-test-container"
  >
    <input
      aria-describedby="description-undefined"
      class="c3"
      data-testid="radio-card-test-input"
      name="test"
      type="radio"
      value="test"
    />
    <label
      class="c4 c5"
    >
      <span
        class="c6 c7"
      >
        <span
          class="c8 c9"
        />
        Test
      </span>
      <span
        aria-hidden="true"
        class="c10 c11"
        id="description-undefined"
      >
        Test description
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Card Matches snapshot (Default, Mobile) 1`] = `
.c9 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1halfx);
  margin-right: var(--spacing-2x);
  vertical-align: middle;
  width: var(--size-1halfx);
}

.c0 {
  border: none;
}

.c1 {
  font-size: 0.875rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: initial;
  -moz-letter-spacing: initial;
  -ms-letter-spacing: initial;
  letter-spacing: initial;
  line-height: 1.5rem;
  margin-bottom: var(--spacing-1x);
}

.c11 {
  color: #60666E;
  font-size: 1rem;
  padding-left: var(--spacing-4x);
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c2:hover:not([disabled]) {
  background-color: #DBDEE1;
  border-color: #60666E;
  cursor: pointer;
}

.c2:hover:not([disabled]) .c10,
.c2:hover:not([disabled]) .c6 {
  color: #000000;
}

.c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c3 {
  height: var(--size-1halfx);
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0.125rem;
  width: var(--size-1halfx);
}

.c3:checked + .c4 > .c6 > .c8 {
  border: 2px solid #006296;
}

.c3:checked + .c4 > .c6 > .c8::after {
  background-color: #006296;
  border-radius: 50%;
  content: '';
  height: var(--size-half);
  margin: 6px;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: var(--size-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  />
  <div
    class="c2"
    data-testid="radio-card-test-container"
  >
    <input
      aria-describedby="description-undefined"
      class="c3"
      data-testid="radio-card-test-input"
      name="test"
      type="radio"
      value="test"
    />
    <label
      class="c4 c5"
    >
      <span
        class="c6 c7"
      >
        <span
          class="c8 c9"
        />
        Test
      </span>
      <span
        aria-hidden="true"
        class="c10 c11"
        id="description-undefined"
      >
        Test description
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Card Matches snapshot (Disabled, Desktop) 1`] = `
.c9 {
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  margin-right: var(--spacing-2x);
  vertical-align: middle;
  width: var(--size-1x);
}

.c0 {
  border: none;
}

.c1 {
  font-size: 0.75rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B7BBC2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: initial;
  -moz-letter-spacing: initial;
  -ms-letter-spacing: initial;
  letter-spacing: initial;
  line-height: 1.5rem;
  margin-bottom: var(--spacing-1x);
}

.c11 {
  color: #B7BBC2;
  font-size: 0.875rem;
  padding-left: var(--spacing-4x);
}

.c2 {
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c2:hover:not([disabled]) {
  background-color: #DBDEE1;
  border-color: #60666E;
  cursor: pointer;
}

.c2:hover:not([disabled]) .c10,
.c2:hover:not([disabled]) .c6 {
  color: #000000;
}

.c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c3 {
  height: var(--size-1x);
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0.125rem;
  width: var(--size-1x);
}

.c3:checked + .c4 > .c6 > .c8 {
  border: 2px solid #006296;
}

.c3:checked + .c4 > .c6 > .c8::after {
  background-color: #006296;
  border-radius: 50%;
  content: '';
  height: var(--size-half);
  margin: 6px;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: var(--size-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  />
  <div
    class="c2"
    data-testid="radio-card-test-container"
    disabled=""
  >
    <input
      aria-describedby="description-undefined"
      class="c3"
      data-testid="radio-card-test-input"
      disabled=""
      name="test"
      type="radio"
      value="test"
    />
    <label
      class="c4 c5"
    >
      <span
        class="c6 c7"
        disabled=""
      >
        <span
          class="c8 c9"
          disabled=""
        />
        Test
      </span>
      <span
        aria-hidden="true"
        class="c10 c11"
        disabled=""
        id="description-undefined"
      >
        Test description
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Card Matches snapshot (Label, Desktop) 1`] = `
.c9 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1x);
  margin-right: var(--spacing-2x);
  vertical-align: middle;
  width: var(--size-1x);
}

.c0 {
  border: none;
}

.c1 {
  font-size: 0.75rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: initial;
  -moz-letter-spacing: initial;
  -ms-letter-spacing: initial;
  letter-spacing: initial;
  line-height: 1.5rem;
  margin-bottom: var(--spacing-1x);
}

.c11 {
  color: #60666E;
  font-size: 0.875rem;
  padding-left: var(--spacing-4x);
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c2:hover:not([disabled]) {
  background-color: #DBDEE1;
  border-color: #60666E;
  cursor: pointer;
}

.c2:hover:not([disabled]) .c10,
.c2:hover:not([disabled]) .c6 {
  color: #000000;
}

.c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c3 {
  height: var(--size-1x);
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0.125rem;
  width: var(--size-1x);
}

.c3:checked + .c4 > .c6 > .c8 {
  border: 2px solid #006296;
}

.c3:checked + .c4 > .c6 > .c8::after {
  background-color: #006296;
  border-radius: 50%;
  content: '';
  height: var(--size-half);
  margin: 6px;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: var(--size-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  >
    Test
  </legend>
  <div
    class="c2"
    data-testid="radio-card-test-container"
  >
    <input
      aria-describedby="description-undefined"
      class="c3"
      data-testid="radio-card-test-input"
      name="test"
      type="radio"
      value="test"
    />
    <label
      class="c4 c5"
    >
      <span
        class="c6 c7"
      >
        <span
          class="c8 c9"
        />
        Test
      </span>
      <span
        aria-hidden="true"
        class="c10 c11"
        id="description-undefined"
      >
        Test description
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Card Matches snapshot (Label, Mobile) 1`] = `
.c9 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: var(--size-1halfx);
  margin-right: var(--spacing-2x);
  vertical-align: middle;
  width: var(--size-1halfx);
}

.c0 {
  border: none;
}

.c1 {
  font-size: 0.875rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-weight: var(--font-semi-bold);
  -webkit-letter-spacing: initial;
  -moz-letter-spacing: initial;
  -ms-letter-spacing: initial;
  letter-spacing: initial;
  line-height: 1.5rem;
  margin-bottom: var(--spacing-1x);
}

.c11 {
  color: #60666E;
  font-size: 1rem;
  padding-left: var(--spacing-4x);
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius-2x);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: var(--spacing-2x) var(--spacing-3x);
  width: 100%;
}

.c2:focus-within {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c2:hover:not([disabled]) {
  background-color: #DBDEE1;
  border-color: #60666E;
  cursor: pointer;
}

.c2:hover:not([disabled]) .c10,
.c2:hover:not([disabled]) .c6 {
  color: #000000;
}

.c2:not(:last-child) {
  margin-bottom: var(--spacing-1x);
}

.c3 {
  height: var(--size-1halfx);
  left: 0;
  margin: 0;
  opacity: 0;
  position: absolute;
  top: 0.125rem;
  width: var(--size-1halfx);
}

.c3:checked + .c4 > .c6 > .c8 {
  border: 2px solid #006296;
}

.c3:checked + .c4 > .c6 > .c8::after {
  background-color: #006296;
  border-radius: 50%;
  content: '';
  height: var(--size-half);
  margin: 6px;
  position: absolute;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: var(--size-half);
}

<fieldset
  class="c0"
>
  <legend
    class="c1"
  >
    Test
  </legend>
  <div
    class="c2"
    data-testid="radio-card-test-container"
  >
    <input
      aria-describedby="description-undefined"
      class="c3"
      data-testid="radio-card-test-input"
      name="test"
      type="radio"
      value="test"
    />
    <label
      class="c4 c5"
    >
      <span
        class="c6 c7"
      >
        <span
          class="c8 c9"
        />
        Test
      </span>
      <span
        aria-hidden="true"
        class="c10 c11"
        id="description-undefined"
      >
        Test description
      </span>
    </label>
  </div>
</fieldset>
`;
